chore: initial commit

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=root;password=ezpark123;database=ez-park-wa"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
