--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=ezpark123;database=ez-park-wa"
+    "DefaultConnection": "server=localhost;user=root;password=admin123;database=ezpark_application"
   },
   "Logging": {
     "LogLevel": {
