--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=admin123;database=ezpark_application"
+    //"DefaultConnection": "server=localhost;user=root;password=admin123;database=ezpark_application"
+    "DefaultConnection": "server=upcdb.cmfzveygo6vv.us-east-2.rds.amazonaws.com;user=admin;password=12345678;database=ezparkgarage"
   },
   "Logging": {
     "LogLevel": {
