--- a/ez-park-api.csproj
+++ b/ez-park-api.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="EntityFrameworkCore.CreatedUpdatedDate" Version="8.0.0" />
 		<PackageReference Include="Humanizer" Version="2.14.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
